[metadata]
name = ejbca-rest-api
version = 0.0.5
author = Philip Prindeville
author_email = philipp@redfish-solutions.com
description = EJBCA utility library
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source Code = https://github.com/pprindeville/ejbca-rest-api-v1
license = MIT
keywords = ejbca pki rest
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.7

